if(DMRG_ENABLE_BENCH)
    cmake_minimum_required(VERSION 3.15)
    message(STATUS "Enabling benchmarks")
    add_subdirectory(eig)
    add_subdirectory(schmidt)
    add_subdirectory(svd)
    add_subdirectory(rsvd)
    add_subdirectory(swapgates)
    add_subdirectory(tensoridentity)
    add_subdirectory(tid)
    add_subdirectory(matvec)
endif()
