if (DMRG_ENABLE_TESTS)
    cmake_minimum_required(VERSION 3.15)
    message(STATUS "Enabling tests")
    enable_testing()
    add_subdirectory(broadcast)
    add_subdirectory(map-shuffle)
    add_subdirectory(partial-trace)
    add_subdirectory(svd)
    add_subdirectory(lbit-evolution)
    add_subdirectory(h5float128)
    add_subdirectory(fmtfloat128)
#    add_subdirectory(tomlparser)
    add_subdirectory(toml11parser)
    add_subdirectory(random)
endif()
